--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ license = {text = "MIT"}
 authors = [
     {name = "Simple Proxy Contributors"}
 ]
-keywords = ["proxy", "aws", "fargate", "cloud", "deployment"]
+keywords = ["proxy", "aws", "fargate", "vultr", "vke", "kubernetes", "cloud", "deployment"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -30,6 +30,8 @@ classifiers = [
 dependencies = [
     "boto3>=1.40.0",
     "requests>=2.32.0",
+    "kubernetes>=30.0.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
